@@ -1,6 +1,7 @@
 Revision history for Dist-Zilla-Plugin-GenerateFile-ShareDir
 
 {{$NEXT}}
+          - some logic abstracted out to Dist::Zilla::Role::RepoFileInjector
 
 0.006     2015-07-05 05:26:56Z
           - fix pod errors
